# beanru

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
src/: bag.rs  check.rs  closing.rs  fix_balance.rs  format.rs  lib.rs  main.rs  parse.rs  split_stock.rs  types.rs
src/exp/: mod.rs  transaction.rs
src/importers/: revolut.rs
tests/: exp.rs
