[package]
name = "bean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.0"
beancount_parser_2 = '=1.0.0-beta.3'
clap = { version = "4.3.4", features = ["derive"] }
itertools = "0.10.0"
chrono = "0.4.0"
rust_decimal = "1.0.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
