[package]
name = "beanru"
version = "0.1.0"
edition = "2021"

description = "Library to simplify writing read-modify-write scripts for beancount."
licence = "Apache-2.0"
keywords = ["beancount"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.0"
beancount-parser = '2.0.0'
chrono = "0.4.0"
clap = { version = "4.3.4", features = ["derive"] }
itertools = "0.10.0"
regex = "1"
rust_decimal = "1.0.0"
lazy_static = "1.0.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
