[package]
name = "beanru"
version = "0.1.0"
edition = "2021"

description = "Library to simplify writing read-modify-write scripts for beancount."
license = "Apache-2.0"
keywords = ["beancount"]

repository = "https://github.com/doriath/beanru"
authors = ["Tomasz Zurkowski <tomasz.zurkowski@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.0"
beancount-parser = '2.0.0'
chrono = "0.4.0"
clap = { version = "4.3.4", features = ["derive"] }
csv = "1"
itertools = "0.10.0"
lazy_static = "1.0.0"
md5 = "0.7"
regex = "1"
rust_decimal = "1.0.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"], optional = true }

[dev-dependencies]
pretty_assertions = "1.3.0"
googletest = "0.10.0"

[features]
build-binary = ["tokio"]

[[bin]]
name = "beanru"
required-features = ["build-binary"]
